--- a/templates/owners.html
+++ b/templates/owners.html
@@ -7,7 +7,7 @@
         <input type="text" id="firstName" placeholder="First Name" required>
         <input type="text" id="lastName" placeholder="Last Name" required>
         <input type="tel" id="phone" placeholder="Phone" required>
-        <input type="text" id="address" placeholder="Address">
+        <input type="email" id="email" placeholder="Email"> <input type="text" id="address" placeholder="Address">
         <button type="submit">Add Owner</button>
     </form>
     <hr>
